# RAG-Knowledge-Base-Platform

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY.md  DEVELOPMENT_LOG.md  Dockerfile  INSTALL.sh  MIGRATION_GUIDE.md  Makefile  PROJECT_ROADMAP.md  README.md  RUNBOOK.md  RUNBOOK_LOCAL.md  alembic.ini  check_databases.sh  check_documents.py  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.rag-lab.yml  docker-compose.yml  migrate_collection_names.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_document_ai_history.txt  test_semantic_chunking.py  test_semantic_chunking_integration.py  test_texts.py  verify_system.sh
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  oauth.py
app/api/v1/: __init__.py  auth.py  auto_tune.py  chat.py  documents.py  embeddings.py  health.py  kb_transfer.py  knowledge_bases.py  llm.py  mcp_oauth_events.py  mcp_refresh_tokens.py  mcp_tokens.py  ollama.py  prompts.py  retrieve.py  settings.py  setup.py  system_settings.py  uploads.py
app/core/: auth.py  embeddings.py  embeddings_base.py  embeddings_factory.py  embeddings_ollama.py  embeddings_voyage.py  lexical_store.py  llm_anthropic.py  llm_base.py  llm_deepseek.py  llm_factory.py  llm_ollama.py  llm_openai.py  retrieval.py  system_settings.py  vector_store.py
app/db/: base.py  session.py
app/db/migrations/: README  env.py
app/db/migrations/versions/: 001_initial_schema.py  002_add_embedding_config.py  003_add_document_structure.py  004_add_kb_upsert_batch_size.py  005_add_conversations.py  006_add_conversation_settings.py  007_add_chat_message_model.py  008_add_app_settings.py  009_add_app_settings_kb_defaults.py  010_add_app_settings_retrieval_mode.py  011_add_document_index_status.py  012_add_bm25_settings.py  013_add_structure_settings.py  014_add_admin_users_and_system_settings.py  015_add_document_duplicate_chunks.py  016_merge_heads_013_and_015.py  017_merge_heads_016_and_fa1b.py  018_add_mcp_tokens.py  019_add_mcp_refresh_tokens.py  020_add_mcp_auth_codes.py  021_add_mcp_auth_events.py  022_add_rerank_settings.py  023_add_kb_llm_settings.py  024_drop_document_structure.py  025_add_document_heading_map.py  026_add_pdf_filetype.py  027_add_page_map.py  028_add_document_file_path.py  029_add_document_language.py  030_add_contextual_description_settings.py  031_cleanup_chunking_strategy_enum.py  031d3e796cb8_add_new_chunking_strategy_enum_values.py  032_add_pdf_parsing_overrides.py  033_add_message_feedback.py  034_qa_sample_source_message.py  035_add_document_web_columns.py  036_add_consumed_upload_tokens.py  0f3b9f7a1c9a_add_chunking_strategy_enum_values.py  1b9c2f4d7a61_add_use_self_check_to_chat_messages.py  2f6c1a9b3d52_merge_heads_014_and_0f3b9.py  (+15 more)
app/mcp/: manager.py  middleware.py  server.py
app/models/: database.py  enums.py  schemas.py
app/services/: chat_titles.py  chunking.py  document_analyzer.py  document_processor.py  duplicate_chunks.py  feedback_promotion.py  kb_export_import.py  mcp_oauth_events.py  mcp_tokens.py  pdf_parsing_settings.py  prompts.py  qa_eval.py  query_classifier.py  query_intent.py  rag.py  retrieval_hints.py  retrieval_settings.py  settings_resolution.py  setup_manager.py  upload_signing.py  url_extractor_client.py
app/utils/: file_handlers.py  logger.py  text.py  time.py  validators.py
app/utils/file_handlers/: __init__.py  base.py  docx.py  factory.py  fb2.py  markdown.py  pdf.py  text.py
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docs/: GRAPH_PLAN.md  PRODUCTION_DEPLOYMENT.md  PROMPTS.md  UPDATE_GUIDE.md
frontend/: .dockerignore  DEPLOYMENT.md  Dockerfile.production  README.md  TESTING.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.cjs  tailwind.config.cjs  test.html  vite.config.ts
frontend/playwright-report/: index.html
frontend/public/: site.webmanifest
frontend/src/: App.test-simple.tsx  App.tsx  index.css
frontend/src/api/: setup.ts
frontend/src/components/chat/: ChatInput.tsx  ChatSettings.tsx  ConversationList.tsx  LLMSelector.tsx  MessageBubble.tsx  SourceCard.tsx
frontend/src/components/common/: Button.tsx  ErrorBoundary.tsx  Field.tsx  Input.tsx  MathRenderer.tsx  Modal.tsx  Panel.tsx  PanelHeader.tsx  Select.tsx  Textarea.tsx
frontend/src/components/kb/: KBCard.tsx  (+1 more)
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useChat.ts  useDocumentPolling.ts  useDocuments.ts  useKnowledgeBases.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  KBDetailsPage.tsx  LoginPage.tsx  SettingsPage.css  SettingsPage.tsx  SettingsPage.tsx.backup  Setup.css  Setup.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/tests/: README.md  ui.spec.cjs
scripts/: README.md  backup.sh  check.sh  check_mcp_smoke.sh  deploy_backend.sh  deploy_frontend.sh  fix_enum_case.sh  migrate_dev_to_prod.sh  recover_database_url.sh  restore.sh  setup_secrets.sh
tests/: README.md  conftest.py
tests/e2e/: test_health.py
tests/integration/: test_documents_api.py  test_knowledge_bases_api.py  test_mcp_tools.py
tests/unit/: test_api_auth.py  test_chunking.py  test_config.py  test_core_auth.py  test_document_processor_headings.py  test_feedback_promotion.py  test_file_handlers.py  test_pdf_parsing_overrides.py  test_query_classifier.py  test_retrieval_hints.py  test_validators.py
(+5 files in other folders)
