[project]
name = "knowledge-base-platform"
version = "0.1.0"
description = "Universal Knowledge Base Platform with RAG"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "langchain.*",
    "openai.*",
]
ignore_missing_imports = true

# Baseline of pre-existing type errors (152 errors as of 2026-07-04).
# New/changed modules are checked strictly; pay these down and remove
# entries as they're fixed rather than adding new ones.
[[tool.mypy.overrides]]
module = [
    "app.api.oauth",
    "app.api.v1.auth",
    "app.api.v1.chat",
    "app.api.v1.documents",
    "app.api.v1.knowledge_bases",
    "app.api.v1.ollama",
    "app.api.v1.retrieve",
    "app.api.v1.settings",
    "app.api.v1.system_settings",
    "app.config",
    "app.core.auth",
    "app.core.embeddings_ollama",
    "app.core.embeddings_voyage",
    "app.core.lexical_store",
    "app.core.llm_anthropic",
    "app.core.llm_base",
    "app.core.llm_deepseek",
    "app.core.llm_ollama",
    "app.core.llm_openai",
    "app.core.vector_store",
    "app.db.session",
    "app.mcp.middleware",
    "app.models.schemas",
    "app.services.chunking",
    "app.services.document_processor",
    "app.services.duplicate_chunks",
    "app.services.kb_export_import",
    "app.services.qa_eval",
    "app.services.rag",
    "app.utils.file_handlers.docx",
    "app.utils.file_handlers.pdf",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "app/db/migrations"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [
    "E501",  # line length is enforced by black
    "E712",  # SQLAlchemy uses `Column == False` in where-clauses
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
